#cmake 版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
#项目名称
PROJECT(FFmpegDemo)
#输出路径
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../bin)
message("OUTPUT_LIB_PATH:" ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

#编译目标类型
SET(CMAKE_BUILD_TYPE "debug")
#设置编译选项
SET(CMAKE_CXX_FLAGS "-g -std=c++11")
#设置头文件目录
SET(HELLO_INC ${PROJECT_SOURCE_DIR}/hello)
SET(FFMPEGAPI_INC ${PROJECT_SOURCE_DIR}/ffmpeg_api/)
SET(FFMPEG_INC /usr/local/ffmpeg4.0/include/)
SET(DEPEND_INC 
	${HELLO_INC}
	${FFMPEG_INC}
	${FFMPEGAPI_INC}
	)
INCLUDE_DIRECTORIES(${DEPEND_INC})

SET(FFMPEG_LIB_PATH /usr/local/ffmpeg4.0/lib)
SET(DEPEND_LIB_PATH
	${PROJECT_SOURCE_DIR}/../lib
	${FFMPEG_LIB_PATH}
)
LINK_DIRECTORIES(${DEPEND_LIB_PATH})

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(hello)
ADD_SUBDIRECTORY(ffmpeg_api)